--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,7 +9,7 @@
 #  weight = 10
 
 [[main]]
-  name = "News"
+  name = "新闻"
   url = "post"
   weight = 20
 
@@ -19,7 +19,7 @@
   weight = 30
 
 [[main]]
-  name = "Events"
+  name = "活动"
   url = "event"
   weight = 40
 
